# tuitask

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_task_table.sql  0002_task_completion_nullness.sql  0003_category.sql  0004_category_nullness.sql  0005_category_serial_id.sql  0006_task_remove_category_name.sql
src/: action.rs  app.rs  category.rs  database.rs  event.rs  key.rs  main.rs  task.rs  ui.rs
src/app/: action.rs  categories.rs  category_editor.rs  task_editor.rs  upcoming.rs
