[package]
name = "tuitask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
chrono = { version = "0.4" }
ratatui = { version = "0.23", features = ["all-widgets"] }
crossterm = { version = "0.26" }
